--- a/src/components/globals/Header.astro
+++ b/src/components/globals/Header.astro
@@ -58,8 +58,8 @@ const { pathname } = Astro.url;
 </div>
 
 <div class="overlay-menu max-w-[528px] fixed top-0 right-0 w-full h-full bg-[#BADF01] z-40 [&:not(.active)]:opacity-0 [&:not(.active)]:pointer-events-none [&:not(.active)]:translate-x-full transition-all duration-300">
-    <div class="overlay-menu-inner max-h-screen overflow-y-auto pt-28 pb-6 px-9">
-        <div class="flex justify-between items-start">
+    <div class="overlay-menu-inner max-h-screen overflow-y-auto pt-28 pb-6 px-9 h-full flex flex-col items-start justify-between">
+        <div class="flex justify-between items-start  w-full">
             <div class="overlay-menu-inner-header flex-1 flex flex-col gap-9">
                 <a href="/" class="item-link current-page">
                     HOME
@@ -81,8 +81,8 @@ const { pathname } = Astro.url;
                 <img src="/images/menu-logo.svg" alt="Logo">
             </div>
         </div>
-        <div class="border-[#ffffff] border-t-[1px] border-b-[1px] py-8 mt-16 grid grid-cols-2 gap-7">
-            <div class="col-span-2">
+        <div class="border-[#ffffff] border-t-[1px] border-b-[1px] py-8 grid grid-cols-2 gap-7 mt-auto w-full">
+            <div class="col-span-2 mt-16">
                 <h4 class="font-text text-[10px] uppercase tracking-[3px] text-[#000] mb-1">CONTACT</h4>
                 <a href="mailto:hello@hubert.studio" class="font-display text-[28px] text-[#000] font-medium">hello@hubert.studio</a>
             </div>
