--- a/src/styles/components/_worldWork.scss
+++ b/src/styles/components/_worldWork.scss
@@ -2,18 +2,30 @@
     min-height: calc(var(--vh, 1vh) * 100);
     position: relative;
     overflow: hidden;
+    &::before {
+        content: '';
+        position: absolute;
+        display: block;
+        height: 30vh;
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #000000 30%);
+        z-index: 2;
+    }
     .inside {
         position: relative;
         .sequence-wrapper {
             width: 100%;
             height: 100%;
-            max-width: 45vh;
+            max-width: 60vh;
             aspect-ratio: 1 / 1;
             margin: 0 auto;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            z-index: 4;
             &::before {
                 content: '';
                 position: absolute;
@@ -35,16 +47,34 @@
         
          
     }
+    .container {
+        position: relative;
+        z-index: 3;
+    }
     .backdrop {
         height: 637px;
         width: 100%;
         max-width: 1332px;
         margin: 0 auto 0;
-        background-image: url('/images/rectangle.svg');
+        // background-image: url('/images/rectangle.svg');
         background-position: center;
         background-repeat: no-repeat;
         height: 100vh;
-        max-height: calc(100vh - 300px);
+        max-height: calc(100vh - 350px);
+        z-index: -1;
+        
+        &:after {
+            content: '';
+            position: absolute;
+            display: block;
+            height: 100vh;
+            width: 100%;
+            top: 0;
+            left: 0;
+            background-image: url('/images/backdrop-oversize.png');
+            background-position: center;
+            background-repeat: no-repeat;
+        }
     }
     .world-world-horizontal {
         position: absolute;
@@ -52,13 +82,14 @@
         left: 0px;
         width: 100%;
         transform: translateY(-50%);
+        z-index: 3;
         img {
             width: auto;
             height: 100vh;
-            max-height: calc((var(--vh, 1vh) * 100 ) - 300px);
+            max-height: calc((var(--vh, 1vh) * 100 ) - 350px);
             max-width: fit-content;
            @media (min-height: 1000px) {
-            max-height: calc((var(--vh, 1vh) * 100 ) - 600px);
+            max-height: calc((var(--vh, 1vh) * 100 ) - 450px);
            }
         }
     }
