--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import WorldWork from '../components/sections/worldWork.astro';
     <section class="border-t-[#BADF01] border-t-[20px] hubert-about-us pt-20 md:pb-16 bg-white hubert-s2 z-index-[2]">
         <div class="hubert-s2-content">
             <div class="container relative z-10">
-                <div class=" xl:text-5xl text-3xl font-medium text-white gap-2 min-h-[50vh] flex pt-[15vh] items-start hubert-s2-text" data-animation="fade-up">
+                <div class=" xl:text-5xl text-3xl font-medium text-white gap-2 min-h-[50vh] flex md:pt-[15vh] items-start hubert-s2-text" data-animation="fade-up">
                     <div class="grid grid-cols-1 w-full">
                         <div class="col-span-1 text-right">
                             <p class="animate-text-about-us"> Born from the love of gaming, powered by </p>
