--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,7 +18,7 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-text-size-adjust: 100%;
     font-weight: 400;
-    min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
     overflow-x: hidden;
 }
 section {
