--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
     <div class="page-heading md:min-h-[100vh] min-h-[400px] pt-[144px] md:pb-[100px] pb-[50px] bg-black z-10 relative flex items-center justify-center bg-cover bg-center bg-no-repeat" style="background-image: url('/images/about-us-banner.png');">
         <div class="container">
             <div class="text-center text-white">
-                <h1 class="md:text-[60px] text-[30px] font-inter font-medium text-center">We grew up playing. Now we build the games brands want to be part of.
+                <h1 class="md:text-[60px] text-[calc(1rem+0.5vw)] font-inter font-medium text-center leading-[1]">We grew up playing. Now we build the games brands want to be part of.
                     From strategy to play, we create worlds people will remember.</h1>
             </div>
         </div>
