--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -3,11 +3,11 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Career">
-    <div class="page-heading md:min-h-[456px] min-h-[300px] pt-[144px] md:pb-[100px] pb-[50px] bg-black z-10 relative bg-cover bg-center bg-no-repeat" style="background-image: url('/images/heading-banner.png');">
+    <div class="page-heading md:min-h-[506px] min-h-[300px] pt-[164px] md:pb-[100px] pb-[50px] bg-black z-10 relative bg-cover bg-center bg-no-repeat" style="background-image: url('/images/heading-banner.png');">
         <div class="container">
             <div class="text-center text-white">
                 <p class="page-heading-subTitle font-be font-normal tracking-[0.16em] md:text-sm text-[10px]">CAREER OPPORTUNITIES</p>
-                <h1 class="page-heading-title md:mt-12 mt-6 font-anton md:text-[160px] xl:text-[237px] text-[70px] tracking-[-0.06em]">WORK WITH US</h1>
+                <h1 class="page-heading-title  font-anton md:text-[160px] xl:text-[237px] text-[70px] tracking-[-0.06em] leading-[1]">WORK WITH US</h1>
             </div>
         </div>
         <div class="tamagochi absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-1/2 z-20 xl:max-w-full md:max-w-[320px] max-w-[200px]">
