--- a/src/components/sections/worldWork.astro
+++ b/src/components/sections/worldWork.astro
@@ -3,6 +3,9 @@
         <div class="world-world-horizontal">
             <img src="/images/title/worlds-work.png" alt="World Work">
         </div>
+        <div class="world-vertical hidden">
+            <img src="/images/we-work-text-mobile.png" alt="World Work">
+        </div>
         <div class="backdrop"></div>
         <div class="sequence-wrapper">
             <canvas id="sequence-canvas"></canvas>
