--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,6 +34,7 @@ const { title } = Astro.props;
 		<Footer />
 		<div class="overlay js-overlay"></div>
 		<script is:inline src="./js/jquery.js"></script>
+		<script is:inline src="./js/detectMobile.js"></script>
 		<script is:inline src="./js/fancybox.js"></script>
 		<script is:inline src="./js/owl.carousel.js"></script>
 		<script is:inline src="./js/main.js"></script>
