--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -65,7 +65,7 @@ import Layout from '../layouts/Layout.astro';
     <div class="aboout-us-quote bg-black md:py-10 py-5 z-10 relative">
         <div class="container">
             <div class="backdrop flex items-center justify-center md:!min-h-[523px] !min-h-[300px]">
-                <img src="/images/quote-text.png" alt="">
+                <img src="/images/quote-text.svg" alt="">
             </div>
         </div>
     </div>
