--- a/src/components/globals/Footer.astro
+++ b/src/components/globals/Footer.astro
@@ -8,13 +8,13 @@
         </div>
         <div class="bottom-footer grid lg:grid-cols-2 xl:grid-cols-3 grid-cols-1 w-full">
             <div class="col-span-1">
-                <h3 class="font-text tracking-[4px] text-black mb-5">OFFICE</h3>
-                <p class="text-black font-text text-sm">9B Phung Khac Khoan<br>
+                <h3 class="font-text text-black font-light mb-5">OFFICE</h3>
+                <p class="text-black font-text">9B Phung Khac Khoan<br>
                     Da Kao Ward, District 1<br>
                     Ho Chi Minh City, Vietnam</p>
             </div>
             <div class="col-span-2">
-                <h3 class="font-text tracking-[4px] text-black mb-5">LINKS</h3>
+                <h3 class="font-text text-black font-light mb-5">LINKS</h3>
                 <ul class="grid grid-cols-2 xl:grid-cols-3 gap-x-3 gap-y-1 bottom-menu">
                     <li class="col-span-1">
                         <a href="/">Contact</a>
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div class="col-span-2 copyright">
-                <p class="text-black font-text text-sm font-light mt-11">© 2025. All rights rerserved</p>
+                <p class="text-black font-text font-light mt-11">© 2025. All rights rerserved</p>
             </div>
         </div>
         <div class="sharp-box sharp-nitendo-console">
