--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,14 +10,11 @@ import WorldWork from '../components/sections/worldWork.astro';
             <div class="container relative z-10">
                 <div class=" xl:text-5xl text-3xl font-medium text-white gap-2 min-h-[50vh] flex md:pt-[15vh] items-start hubert-s2-text" data-animation="fade-up">
                     <div class="grid grid-cols-1 w-full">
-                        <div class="col-span-1 d-none text-mobile">
+                        <div class="col-span-1 hidden text-mobile">
                             <p class="animate-text-about-us">Born from the love of gaming, powered by creative minds, gaming hearts, and brand brains.</p>
                         </div>
-                        <div class="col-span-1 text-right">
-                            <p class="animate-text-about-us"> Born from the love of gaming, powered by </p>
-                        </div>
                         <div class="col-span-1">
-                            <p class="animate-text-about-us">creative minds, gaming hearts, and brand brains.</p>
+                            <p class="animate-text-about-us"> Born from the love of gaming, powered by creative minds, gaming hearts, and brand brains</p>
                         </div>
                     </div>
                 </div>
@@ -94,18 +91,15 @@ import WorldWork from '../components/sections/worldWork.astro';
                     </h3>
                 </div>
             </div>
-            <div class="md:flex text-center md:text-left grid grid-cols-1 md:gap-8 gap-4 justify-center mt-20 abt-quote-sub">
-               <div class="md:max-w-[260px] col-span-1">
-                    <p class="text-sm leading-6 font-light font-text text-white">
+            <div class="text-center md:text-left grid grid-cols-1 md:gap-8 gap-4 justify-center mt-20 abt-quote-sub">
+               <div class="col-span-1 text-center">
+                    <p class="text-lg leading-6 font-light font-text text-white">
                         This is our process. <br/>
                         Now see what it looks like in action.
                     </p>
                </div>
-               <div class="md:max-w-[80px] col-span-1 abt-quote-img-desktop">
-                    <img src="/images/smile-icon.svg" alt="smile icon" class="mx-auto md:mx-0">
-               </div>
-               <div class="md:max-w-[250px] w-full col-span-1">
-                    <a href="#" class="btn btn-default btn-full">
+               <div class=" w-full col-span-1 text-center">
+                    <a href="#" class="btn btn-default btn-full md:max-w-[391px] md:!h-[73px] !h-[50px] !bg-[#BADF01] !text-black md:!text-[26px] !text-[18px] [&:hover]:!opacity-80">
                         See our work
                     </a>
                </div>
@@ -182,8 +176,8 @@ import WorldWork from '../components/sections/worldWork.astro';
     <section class="hubert-project lg:py-[200px] py-10">
         <div class="container max-w-[1142px]">
             <div class="block-heading relative z-10" data-animation="fadeIn-up">
-                <h3 class="md:text-[70px] text-[40px] leading-none font-book text-white border-b border-[#373737] pb-3 mb-3">PROJECTS</h3>
-                <p class="sub-heading max-w-[485px] text-white text-sm leading-6 font-light font-text">
+                <h3 class="md:text-[70px] text-[40px] leading-none font-anton text-white border-b border-[#373737] pb-3 mb-3">PROJECTS</h3>
+                <p class="sub-heading max-w-[485px] text-white text-sm leading-6 font-light">
                     Lorem ipsum dolor sit amet, elit sed do eiusmod, tempor incididunt veritatis consectetur adipiscing. Doloremque laudantium.
                 </p>
                 <div class="sharp-box sharp-game-cartridge lg:block hidden">
